// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a table with data and style prop 1`] = `
WordDocument {
  "doc": officegen {
    "_events": {
      "afterGen": [Function],
      "beforeGen": [Function],
      "clearData": [Function],
      "clearDoc": [Function],
      "clearDocType": [Function],
    },
    "_eventsCount": 5,
    "_maxListeners": undefined,
    "addPageBreak": [Function],
    "addResourceToParse": [Function],
    "cbMakeDocxDocument": [Function],
    "createByJson": [Function],
    "createJson": [Function],
    "createListOfDots": [Function],
    "createListOfNumbers": [Function],
    "createNestedOrderedList": [Function],
    "createNestedUnOrderedList": [Function],
    "createP": [Function],
    "createTable": [Function],
    "data": [],
    "generate": [Function],
    "getFooter": [Function],
    "getHeader": [Function],
    "info": {
      "cp:category": {
        "data": "",
        "def_data": "",
        "element": "cp:category",
      },
      "cp:contentStatus": {
        "data": "",
        "def_data": "",
        "element": "cp:contentStatus",
      },
      "cp:keywords": {
        "data": "",
        "def_data": "",
        "element": "cp:keywords",
      },
      "dc:description": {
        "data": "",
        "def_data": "",
        "element": "dc:description",
      },
      "dc:subject": {
        "data": "",
        "def_data": "",
        "element": "dc:subject",
      },
      "dc:title": {
        "data": "",
        "def_data": "",
        "element": "dc:title",
      },
    },
    "options": {
      "type": "docx",
    },
    "putPageBreak": [Function],
    "setDescription": [Function],
    "setDocCategory": [Function],
    "setDocKeywords": [Function],
    "setDocStatus": [Function],
    "setDocSubject": [Function],
    "setDocTitle": [Function],
    "setTheme": [Function],
    "startNewDoc": [Function],
    "theme": null,
    Symbol(kCapture): false,
  },
  "document": Table {
    "TABLE_DATA": [],
    "defaultStyles": {
      "borders": true,
      "tableAlign": "left",
      "tableColWidth": 2500,
      "tableColor": "black",
      "tableSize": 24,
    },
    "props": {
      "data": [
        [
          "iPhone 7",
          "128GB",
        ],
        [
          "iPhone 5SE",
          "64GB",
        ],
      ],
      "headers": [
        {
          "styles": {
            "bold": true,
            "color": "red",
            "size": 10,
          },
          "value": "Phone",
        },
        {
          "styles": {
            "bold": true,
            "color": "blue",
            "size": 10,
          },
          "value": "Capacity",
        },
      ],
    },
    "root": [Circular],
  },
}
`;

exports[`should render a table with some data 1`] = `
WordDocument {
  "doc": officegen {
    "_events": {
      "afterGen": [Function],
      "beforeGen": [Function],
      "clearData": [Function],
      "clearDoc": [Function],
      "clearDocType": [Function],
    },
    "_eventsCount": 5,
    "_maxListeners": undefined,
    "addPageBreak": [Function],
    "addResourceToParse": [Function],
    "cbMakeDocxDocument": [Function],
    "createByJson": [Function],
    "createJson": [Function],
    "createListOfDots": [Function],
    "createListOfNumbers": [Function],
    "createNestedOrderedList": [Function],
    "createNestedUnOrderedList": [Function],
    "createP": [Function],
    "createTable": [Function],
    "data": [],
    "generate": [Function],
    "getFooter": [Function],
    "getHeader": [Function],
    "info": {
      "cp:category": {
        "data": "",
        "def_data": "",
        "element": "cp:category",
      },
      "cp:contentStatus": {
        "data": "",
        "def_data": "",
        "element": "cp:contentStatus",
      },
      "cp:keywords": {
        "data": "",
        "def_data": "",
        "element": "cp:keywords",
      },
      "dc:description": {
        "data": "",
        "def_data": "",
        "element": "dc:description",
      },
      "dc:subject": {
        "data": "",
        "def_data": "",
        "element": "dc:subject",
      },
      "dc:title": {
        "data": "",
        "def_data": "",
        "element": "dc:title",
      },
    },
    "options": {
      "type": "docx",
    },
    "putPageBreak": [Function],
    "setDescription": [Function],
    "setDocCategory": [Function],
    "setDocKeywords": [Function],
    "setDocStatus": [Function],
    "setDocSubject": [Function],
    "setDocTitle": [Function],
    "setTheme": [Function],
    "startNewDoc": [Function],
    "theme": null,
    Symbol(kCapture): false,
  },
  "document": Table {
    "TABLE_DATA": [],
    "defaultStyles": {
      "borders": true,
      "tableAlign": "left",
      "tableColWidth": 2500,
      "tableColor": "black",
      "tableSize": 24,
    },
    "props": {
      "data": [
        [
          "Divakar",
        ],
      ],
      "headers": [
        {
          "styles": {
            "color": "red",
          },
          "value": "Name",
        },
      ],
    },
    "root": [Circular],
  },
}
`;

exports[`should render a table with table style prop 1`] = `
WordDocument {
  "doc": officegen {
    "_events": {
      "afterGen": [Function],
      "beforeGen": [Function],
      "clearData": [Function],
      "clearDoc": [Function],
      "clearDocType": [Function],
    },
    "_eventsCount": 5,
    "_maxListeners": undefined,
    "addPageBreak": [Function],
    "addResourceToParse": [Function],
    "cbMakeDocxDocument": [Function],
    "createByJson": [Function],
    "createJson": [Function],
    "createListOfDots": [Function],
    "createListOfNumbers": [Function],
    "createNestedOrderedList": [Function],
    "createNestedUnOrderedList": [Function],
    "createP": [Function],
    "createTable": [Function],
    "data": [],
    "generate": [Function],
    "getFooter": [Function],
    "getHeader": [Function],
    "info": {
      "cp:category": {
        "data": "",
        "def_data": "",
        "element": "cp:category",
      },
      "cp:contentStatus": {
        "data": "",
        "def_data": "",
        "element": "cp:contentStatus",
      },
      "cp:keywords": {
        "data": "",
        "def_data": "",
        "element": "cp:keywords",
      },
      "dc:description": {
        "data": "",
        "def_data": "",
        "element": "dc:description",
      },
      "dc:subject": {
        "data": "",
        "def_data": "",
        "element": "dc:subject",
      },
      "dc:title": {
        "data": "",
        "def_data": "",
        "element": "dc:title",
      },
    },
    "options": {
      "type": "docx",
    },
    "putPageBreak": [Function],
    "setDescription": [Function],
    "setDocCategory": [Function],
    "setDocKeywords": [Function],
    "setDocStatus": [Function],
    "setDocSubject": [Function],
    "setDocTitle": [Function],
    "setTheme": [Function],
    "startNewDoc": [Function],
    "theme": null,
    Symbol(kCapture): false,
  },
  "document": Table {
    "TABLE_DATA": [],
    "defaultStyles": {
      "borders": true,
      "tableAlign": "left",
      "tableColWidth": 2500,
      "tableColor": "black",
      "tableSize": 24,
    },
    "props": {
      "data": [
        [
          "iPhone 7",
          "128GB",
        ],
        [
          "iPhone 5SE",
          "64GB",
        ],
      ],
      "headers": [
        {
          "styles": {
            "bold": true,
            "color": "red",
            "size": 10,
          },
          "value": "Phone",
        },
        {
          "styles": {
            "bold": true,
            "color": "blue",
            "size": 10,
          },
          "value": "Capacity",
        },
      ],
      "style": {
        "borders": true,
        "tableAlign": "center",
        "tableColWidth": 4261,
        "tableColor": "red",
        "tableSize": 24,
      },
    },
    "root": [Circular],
  },
}
`;
